Update CSS styles and fix button alignment in index.css and desa.js

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1297,10 +1297,10 @@ input[name="plan"]:checked ~ .menuKetigaAds {
     @apply w-[31.5vw] h-[17.7vh];
   }
   .box_kesuburan_container {
-    @apply w-[9.2vw] h-[14.7vh];
+    @apply w-[9.5vw] h-[14.7vh];
   }
   .box_kesuburan {
-    @apply w-[9.2vw] h-[14.7vh];
+    @apply w-[9.5vw] h-[14.7vh];
   }
   .box_prediksi_hujan_container {
     @apply w-[10vw] h-[14.7vh];
@@ -1325,10 +1325,10 @@ input[name="plan"]:checked ~ .menuKetigaAds {
     @apply w-[31.5vw] h-[17.7vh];
   }
   .box_kesuburan_container {
-    @apply w-[9.2vw] h-[14.7vh];
+    @apply w-[9.5vw] h-[14.7vh];
   }
   .box_kesuburan {
-    @apply w-[9.2vw] h-[14.7vh];
+    @apply w-[9.5vw] h-[14.7vh];
   }
   .box_prediksi_hujan_container {
     @apply w-[10vw] h-[14.7vh];
@@ -1353,10 +1353,10 @@ input[name="plan"]:checked ~ .menuKetigaAds {
     @apply w-[31.5vw] h-[17.7vh];
   }
   .box_kesuburan_container {
-    @apply w-[9.2vw] h-[14.7vh];
+    @apply w-[9.5vw] h-[14.7vh];
   }
   .box_kesuburan {
-    @apply w-[9.2vw] h-[14.7vh];
+    @apply w-[9.5vw] h-[14.7vh];
   }
   .box_prediksi_hujan_container {
     @apply w-[10vw] h-[14.7vh];
@@ -1381,10 +1381,10 @@ input[name="plan"]:checked ~ .menuKetigaAds {
     @apply w-[36.5vw] h-[14.7vh];
   }
   .box_kesuburan_container {
-    @apply w-[9.2vw] h-[14.7vh];
+    @apply w-[9.5vw] h-[14.7vh];
   }
   .box_kesuburan {
-    @apply w-[9.2vw] h-[14.7vh];
+    @apply w-[9.5vw] h-[14.7vh];
   }
   .box_prediksi_hujan_container {
     @apply w-[10vw] h-[14.7vh];
@@ -1410,10 +1410,10 @@ input[name="plan"]:checked ~ .menuKetigaAds {
   }
 
   .box_kesuburan_container {
-    @apply w-[9.2vw] h-[14.7vh];
+    @apply w-[9.5vw] h-[14.7vh];
   }
   .box_kesuburan {
-    @apply w-[9.2vw] h-[14.7vh];
+    @apply w-[9.5vw] h-[14.7vh];
   }
   .box_prediksi_hujan_container {
     @apply w-[10vw] h-[14.7vh];
@@ -1439,10 +1439,10 @@ input[name="plan"]:checked ~ .menuKetigaAds {
   }
 
   .box_kesuburan_container {
-    @apply w-[9.2vw] h-[14.7vh];
+    @apply w-[9.5vw] h-[14.7vh];
   }
   .box_kesuburan {
-    @apply w-[9.2vw] h-[14.7vh];
+    @apply w-[9.5vw] h-[14.7vh];
   }
   .box_prediksi_hujan_container {
     @apply w-[10vw] h-[14.7vh];
@@ -1467,10 +1467,10 @@ input[name="plan"]:checked ~ .menuKetigaAds {
     @apply w-[31.3vw] h-[17.6vh];
   }
   .box_kesuburan_container {
-    @apply w-[9.2vw] h-[17.5vh];
+    @apply w-[9.5vw] h-[17.5vh];
   }
   .box_kesuburan {
-    @apply w-[9.2vw] h-[17.5vh];
+    @apply w-[9.5vw] h-[17.5vh];
   }
   .box_prediksi_hujan_container {
     @apply w-[10vw] h-[17.5vh];
